--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 /* Box sizing rules */
+@import url("https://fonts.googleapis.com/css?family=Damion|Muli:400,600");
 *,
 *::before,
 *::after {
@@ -75,10 +76,12 @@ select {
   }
 }
 @font-face {
-  src: url(./JustAnotherHand-Regular.ttf);
+  src: url(/fonts/JustAnotherHand-Regular.ttf);
   font-family: customFont;
 }
 body {
+  font-family: "Muli", sans-serif;
+  background: url("https://www.toptal.com/designers/subtlepatterns/patterns/geometry2.png");
   margin-inline: 10%;
   background: #f8f8f8;
   background-image: linear-gradient(90deg, rgba(158, 157, 157, 0.21) 0.5px, transparent 0), linear-gradient(rgba(158, 157, 157, 0.21) 0.5px, transparent 0);
@@ -88,71 +91,53 @@ body {
 header {
   height: 10vh;
 }
+
 section main {
   height: 70vh;
   margin-inline: 15em;
-  box-shadow: 1px -1px 49px -8px rgba(0, 0, 0, 0.33);
-  border-radius: 2px;
-  border: 4px solid white;
   margin-bottom: 12vh;
+  box-shadow: 1px -1px 49px -8px rgba(0, 0, 0, 0.33);
+  border-radius: 3px;
+  border: 4px solid white;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-section main .validator {
+section main .title {
   height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: customFont;
-}
-section main .validator .sub-validator {
+  font-family: "Damion", cursive;
+  margin: 50px;
   text-align: center;
   font-size: xx-large;
-}
-section main .validator .sub-validator {
   display: inline-block;
-  border: 3px solid #333333;
   font-size: 2.5rem;
-  border-radius: 2% 6% 5% 4%/1% 1% 2% 4%;
   text-transform: uppercase;
   letter-spacing: 0.3ch;
-  background: #ffffff;
-  position: relative;
-}
-section main .validator .sub-validator::before {
-  content: "";
-  border: 2px solid #353535;
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0) scale(1.022) rotate(0.7deg);
-  border-radius: 1% 1% 2% 4%/2% 6% 5% 4%;
 }
 section main .section-main {
   height: 40vh;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  margin: 2em 10em;
 }
 section main .section-main .question-container {
+  min-width: 15em;
   max-width: 20em;
+  min-height: 2rem;
   max-height: 20em;
-  margin-right: 2vw;
+  border-left: 3px solid #df25d3;
 }
 section main .section-main .question-container p {
   font-size: larger;
-  border-left: 3px solid rgb(112, 105, 170);
   padding-left: 15px;
-}
-section main .section-main .answer-container {
-  max-width: 20em;
-  max-height: 20em;
 }
 section main .section-main .answer-container #answered-word {
   border: 1px solid rgba(255, 255, 255, 0);
@@ -168,11 +153,74 @@ section main .section-main .answer-container #answered-word:focus {
   color: black;
   filter: drop-shadow(1px 1px 5px rgba(10, 10, 10, 0.045));
 }
+section main .section-main .answer-container .col-3 {
+  float: left;
+  width: 100%;
+  margin: 40px 3%;
+  position: relative;
+}
+section main .section-main .answer-container :focus {
+  outline: none;
+}
+section main .section-main .answer-container input[type=text] {
+  font: 15px/24px "Lato", Arial, sans-serif;
+  color: #333;
+  min-width: 10em;
+  max-width: 15em;
+  min-height: 2rem;
+  box-sizing: border-box;
+  letter-spacing: 1px;
+}
+section main .section-main .answer-container .effect-8 ~ .focus-border:before,
+section main .section-main .answer-container .effect-8 ~ .focus-border:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #df25d3;
+  transition: 0.3s;
+}
+section main .section-main .answer-container .effect-8 ~ .focus-border:after {
+  top: auto;
+  bottom: 0;
+  left: auto;
+  right: 0;
+}
+section main .section-main .answer-container .effect-8 ~ .focus-border i:before,
+section main .section-main .answer-container .effect-8 ~ .focus-border i:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2px;
+  height: 0;
+  background-color: #df25d3;
+  transition: 0.4s;
+}
+section main .section-main .answer-container .effect-8 ~ .focus-border i:after {
+  left: auto;
+  right: 0;
+  top: auto;
+  bottom: 0;
+}
+section main .section-main .answer-container .effect-8:focus ~ .focus-border:before,
+section main .section-main .answer-container .effect-8:focus ~ .focus-border:after {
+  width: 100%;
+  transition: 0.9s;
+}
+section main .section-main .answer-container .effect-8:focus ~ .focus-border i:before,
+section main .section-main .answer-container .effect-8:focus ~ .focus-border i:after {
+  height: 100%;
+  transition: 1.2s;
+}
 section main .button-container {
   height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 30px;
 }
 section main .button-container .button-55:focus {
   box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
@@ -186,6 +234,7 @@ section main .button-container .button-54 {
   color: #000;
   cursor: pointer;
   border: 3px solid;
+  margin-top: 1em;
   padding: 0.25em 0.5em;
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
   position: relative;
@@ -209,6 +258,7 @@ section main .button-container .button-54:active {
 
 footer {
   height: 8vh;
+  color: rgba(0, 0, 0, 0.426);
 }
 footer .footer-main {
   height: 100%;
@@ -226,4 +276,5 @@ footer .footer-main .sub-main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
